--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 }
 
 .container {
-    border: 8px outset #000;
+    border: 8px solid #000;
     display: grid;
     grid-template-columns: repeat(16, 1fr);
     grid-template-rows: repeat(16, 1fr);
