--- a/style.css
+++ b/style.css
@@ -8,10 +8,11 @@
     grid-template-columns: repeat(16, 1fr);
     grid-template-rows: repeat(16, 1fr);
     height: 500px;
-    margin: 0 auto;
+    margin: 50px auto;
     width: 500px;
 }
 
 .visited {
     background-color: #000;
 }
+
